@@ -1,9 +1,7 @@
 package com.iamjunhyeok.review.controller;
 
-import com.iamjunhyeok.review.domain.Inquiry;
 import com.iamjunhyeok.review.dto.InquiryCreateRequest;
 import com.iamjunhyeok.review.dto.InquiryCreateResponse;
-import com.iamjunhyeok.review.dto.InquirySearchRequest;
 import com.iamjunhyeok.review.dto.InquirySearchResponse;
 import com.iamjunhyeok.review.dto.InquiryUpdateRequest;
 import com.iamjunhyeok.review.dto.InquiryUpdateResponse;
@@ -11,6 +9,7 @@ import com.iamjunhyeok.review.dto.InquiryViewResponse;
 import com.iamjunhyeok.review.service.InquiryService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -19,11 +18,11 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.util.UriComponentsBuilder;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/support/inquiries")
@@ -34,20 +33,21 @@ public class InquiryController {
 
     @PostMapping
     public ResponseEntity<InquiryCreateResponse> create(@RequestBody @Valid InquiryCreateRequest request) {
-        Inquiry inquiry = inquiryService.create(request);
-        return ResponseEntity.created(
-                UriComponentsBuilder.fromPath("/support/inquiries/{id}")
-                        .buildAndExpand(inquiry.getId())
-                        .toUri()
-        ).build();
+        return ResponseEntity.status(HttpStatus.CREATED).body(InquiryCreateResponse.from(inquiryService.create(request)));
+    }
+
+    @PatchMapping("/{id}")
+    public ResponseEntity<InquiryUpdateResponse> update(@PathVariable Long id, @RequestBody @Valid InquiryUpdateRequest request) {
+        return ResponseEntity.ok(InquiryUpdateResponse.from(inquiryService.update(id, request)));
     }
 
     @GetMapping
-    public ResponseEntity<List<InquirySearchResponse>> search(InquirySearchRequest request) {
+    public ResponseEntity<List<InquirySearchResponse>> search(@RequestParam(required = false) String category) {
         return ResponseEntity.ok(
-                inquiryService.search(request)
-                        .stream().map(inquiry -> InquirySearchResponse.from(inquiry))
-                        .collect(Collectors.toList())
+                inquiryService.search(category)
+                        .stream()
+                        .map(InquirySearchResponse::from)
+                        .toList()
         );
     }
 
@@ -56,15 +56,11 @@ public class InquiryController {
         return ResponseEntity.ok(InquiryViewResponse.from(inquiryService.findById(id)));
     }
 
-    @PatchMapping("/{id}")
-    public ResponseEntity<InquiryUpdateResponse> update(@PathVariable Long id, @RequestBody @Valid InquiryUpdateRequest request) {
-        inquiryService.update(id, request);
-        return ResponseEntity.ok().build();
-    }
+
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> delete(@PathVariable Long id) {
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public void delete(@PathVariable Long id) {
         inquiryService.delete(id);
-        return ResponseEntity.noContent().build();
     }
 }
